hphp/hack/test/typecheck/void_is_type_of_null/option_void1.php.exp
File "option_void1.php", line 3, characters 18-22:
?void is a redundant typehint - just use void (Typing[4241])
