hphp/hack/test/typecheck/void_is_type_of_null/option_void1.php
<?hh // strict

function test(): ?void {
  return null;
}
